Remove .env from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,21 @@
-# Environment variables
+# Created by https://www.toptal.com/developers/gitignore/api/dotenv,venv
+# Edit at https://www.toptal.com/developers/gitignore?templates=dotenv,venv
+
+### dotenv ###
 .env
 
-# Python cache files
-__pycache__/
-*.py[cod]
-*$py.class
+### venv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
 
-# Spotify authentication cache
-.cache
-.cache-*
-
-# Virtual environment
-venv/
-env/
-ENV/
-
-# IDE settings
-.vscode/
-.idea/ 
+# End of https://www.toptal.com/developers/gitignore/api/dotenv,venv
